--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+!/src/main/resources/application-dev.yaml
+!/src/main/resources/application-prod.yaml
+!/src/main/resources/application.yaml
+!/src/main/java/com/li/blog/util/CodeGenerator.java
