--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,6 @@ build/
 ### VS Code ###
 .vscode/
 
-!/src/main/resources/application-dev.yaml
-!/src/main/resources/application-prod.yaml
-!/src/main/resources/application.yaml
-!/src/main/java/com/li/blog/util/CodeGenerator.java
+/src/main/java/com/li/blog/util/CodeGenerator.java
+/src/main/resources/application-dev.yaml
+/src/main/resources/application-prod.yaml
