--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,21 @@ build/
 /src/main/java/com/li/blog/util/CodeGenerator.java
 /src/main/resources/application-dev.yaml
 /src/main/resources/application-prod.yaml
+
+.DS_Store
+node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+!/log/
