--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -8,15 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@icon-park/vue-next": "^1.4.2",
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.3",
+    "marked": "^4.3.0",
     "pinia": "^2.0.34",
     "pinia-plugin-persistedstate": "^3.1.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3",
-    "@icon-park/vue-next": "^1.4.2"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
