--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.3",
+    "highlight.js": "^11.7.0",
     "marked": "^4.3.0",
     "pinia": "^2.0.34",
     "pinia-plugin-persistedstate": "^3.1.0",
