--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.34",
     "pinia-plugin-persistedstate": "^3.1.0",
     "register-service-worker": "^1.7.2",
+    "vditor": "^3.9.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
