--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "github-markdown-css": "^5.2.0",
-    "marked": "^4.3.0"
+    "marked": "^4.3.0",
+    "vditor": "^3.9.2"
   }
 }
