--- a/config/config.ini
+++ b/config/config.ini
@@ -9,7 +9,8 @@ DbHost = localhost
 DbPort = 5432
 DbUser = postgres
 DbPassWord = 123456
-DbName = blog
+DbName = postgres
+
 
 [redis]
 RedisHost = localhost
