--- a/config/config.ini
+++ b/config/config.ini
@@ -1,12 +1,10 @@
 [server]
-# debug 开发模式，release 生产模式
-AppMode = debug
-HttpPort = :3000
+HttpPort = :3641
 
 [database]
 Db = postgres
 DbHost = localhost
-DbPort = 5432
+DbPort = 15432
 DbUser = postgres
 DbPassWord = 123456
 DbName = postgres
@@ -15,5 +13,5 @@ DbName = postgres
 [redis]
 RedisHost = localhost
 RedisPort = 6379
-RedisPassWord =
+RedisPassWord = 123456
 RedisDatabase = 9
