--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,7 @@ HttpPort = :3641
 
 [database]
 Db = postgres
-DbHost = localhost
+DbHost = 172.17.0.1
 DbPort = 15432
 DbUser = postgres
 DbPassWord = 123456
@@ -11,7 +11,7 @@ DbName = postgres
 
 
 [redis]
-RedisHost = localhost
+RedisHost = 172.17.0.1
 RedisPort = 6379
 RedisPassWord = 123456
 RedisDatabase = 9
